# synapse

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  langgraph.json  opencode.json  pyproject.toml  requirements.txt
diagrams/: synapse-arch.excalidraw
synapse/: __init__.py  cli.py  config.py  graph.py  state.py
synapse/api/: __main__.py  app.py
synapse/cache/: session.py
synapse/db/: connection.py  repository.py  schema.py
synapse/extractors/: emergency_detector.py  medical_ner.py
synapse/extractors/dictionaries/: body_parts.json  medications.json  symptoms.json
synapse/llm/: client.py  observability.py
synapse/nodes/: data_persistence.py  emergency_handler.py  error_handler.py  session_close.py  session_manager.py  summary_generator.py  symptom_collector.py  triage_engine.py  urgent_notification.py  welcome_agent.py
synapse/prompts/: templates.py
synapse/tools/: conversation.py  knowledge.py  registry.py  symptoms.py
synapse/triage/: routing.py  rules_engine.py
synapse/validation/: json_validator.py
tests/: test_api.py  test_cache.py  test_db.py  test_emergency_detector.py  test_integration.py  test_json_validator.py  test_medical_ner.py  test_observability.py  test_routing.py  test_triage_engine.py
